--- a/TraversalCoreProject/Views/MemberLayoutPartial/_NavbarPartial.cshtml
+++ b/TraversalCoreProject/Views/MemberLayoutPartial/_NavbarPartial.cshtml
@@ -3,7 +3,7 @@
     User/Member Layout Sidebar Partial
 *@
 
-<div class="main-menu menu-fixed menu-light menu-accordion    menu-shadow " data-scroll-to-active="true" data-img="~/Member/theme-assets/images/backgrounds/02.jpg">
+<div class="main-menu menu-fixed menu-light menu-accordion menu-shadow" data-scroll-to-active="true" data-img="~/Member/theme-assets/images/backgrounds/02.jpg">
     <div class="navbar-header">
         <ul class="nav navbar-nav flex-row">
             <li class="nav-item mr-auto">
@@ -18,37 +18,37 @@
     <div class="main-menu-content">
         <ul class="navigation navigation-main" id="main-menu-navigation" data-menu="menu-navigation">
             <li class="nav-item">
-                <a href="/Member/Dashboard/MemberDashboard"><i class="ft-home"></i><span class="menu-title" data-i18n="">Dashboard</span></a>
+                <a href="/Member/Dashboard/MemberDashboard"><i class="ft-home"></i><span class="menu-title">@T["Sidebar_Dashboard"]</span></a>
             </li>
             <li class="nav-item">
-                <a href="/Member/Destination/Index"><i class="ft-map"></i><span class="menu-title" data-i18n="">Tur Rotalar</span></a>
+                <a href="/Member/Destination/Index"><i class="ft-map"></i><span class="menu-title">@T["Sidebar_TourRoutes"]</span></a>
             </li>
             <li class="nav-item">
-                <a href="/Member/LastDestination/Index"><i class="ft-map"></i><span class="menu-title" data-i18n="">Son Rotalar</span></a>
+                <a href="/Member/LastDestination/Index"><i class="ft-map"></i><span class="menu-title">@T["Sidebar_LastRoutes"]</span></a>
             </li>
             <li class="nav-item">
-                <a href="/Member/Profile/Index"><i class="ft-user"></i><span class="menu-title" data-i18n="">Profilim</span></a>
+                <a href="/Member/Profile/Index"><i class="ft-user"></i><span class="menu-title">@T["Sidebar_Profile"]</span></a>
             </li>
             <li class="nav-item">
-                <a href="/Member/Reservation/MyCurrentReservation"><i class="ft-calendar"></i><span class="menu-title" data-i18n="">Aktif Rezervasyon</span></a>
+                <a href="/Member/Reservation/MyCurrentReservation"><i class="ft-calendar"></i><span class="menu-title">@T["Sidebar_CurrentReservation"]</span></a>
             </li>
             <li class="nav-item">
-                <a href="/Member/Reservation/MyPastReservations"><i class="ft-box"></i><span class="menu-title" data-i18n="">Geçmiş Rezervasyon</span></a>
+                <a href="/Member/Reservation/MyPastReservations"><i class="ft-box"></i><span class="menu-title">@T["Sidebar_PastReservation"]</span></a>
             </li>
             <li class="nav-item">
-                <a href="/Member/Reservation/MyApprovalReservation"><i class="ft-clock"></i><span class="menu-title" data-i18n="">Onay Bekleyenler</span></a>
+                <a href="/Member/Reservation/MyApprovalReservation"><i class="ft-clock"></i><span class="menu-title">@T["Sidebar_PendingReservation"]</span></a>
             </li>
             <li class="nav-item">
-                <a href="/Member/Reservation/NewReservation"><i class="ft-plus-square"></i><span class="menu-title" data-i18n="">Rezervasyon Yap</span></a>
+                <a href="/Member/Reservation/NewReservation"><i class="ft-plus-square"></i><span class="menu-title">@T["Sidebar_NewReservation"]</span></a>
             </li>
             <li class="nav-item">
-                <a href="form-elements.html"><i class="ft-bell"></i><span class="menu-title" data-i18n="">Duyurular</span></a>
+                <a href="form-elements.html"><i class="ft-bell"></i><span class="menu-title">@T["Sidebar_Announcements"]</span></a>
             </li>
             <li class="nav-item">
-                <a href="/Default/Index"><i class="ft-power"></i><span class="menu-title" data-i18n="">Siteye Git</span></a>
+                <a href="/Default/Index"><i class="ft-power"></i><span class="menu-title">@T["Sidebar_GoToSite"]</span></a>
             </li>
             <li class="nav-item">
-                <a href="/Default/Index"><i class="ft-power"></i><span class="menu-title" data-i18n="">Çıkış Yap</span></a>
+                <a href="/Default/Index"><i class="ft-power"></i><span class="menu-title">@T["Sidebar_Logout"]</span></a>
             </li>
         </ul>
     </div>
