--- a/TraversalCoreProject/Views/Shared/Components/_MemberStatistics/Default.cshtml
+++ b/TraversalCoreProject/Views/Shared/Components/_MemberStatistics/Default.cshtml
@@ -25,27 +25,27 @@
                 <div class="row text-center">
                     <div class="col-md-6 col-lg-4 mb-3">
                         <h6 class="mb-1 text-primary fw-bold">Aktif Rezervasyon</h6>
-                        <p class="mb-0 text-dark fs-5">4</p>
+                        <p class="mb-0 text-dark fs-5">@ViewBag.v1</p>
                     </div>
                     <div class="col-md-6 col-lg-4 mb-3">
                         <h6 class="mb-1 text-success fw-bold">Geçmiş Rezervasyon</h6>
-                        <p class="mb-0 text-dark fs-5">12</p>
+                        <p class="mb-0 text-dark fs-5">@ViewBag.v2</p>
                     </div>
                     <div class="col-md-6 col-lg-4 mb-3">
                         <h6 class="mb-1 text-warning fw-bold">Onay Bekleyen</h6>
-                        <p class="mb-0 text-dark fs-5">1</p>
+                        <p class="mb-0 text-dark fs-5">@ViewBag.v3</p>
                     </div>
                     <div class="col-md-6 col-lg-4 mb-3">
                         <h6 class="mb-1 text-info fw-bold">Toplam Rota</h6>
-                        <p class="mb-0 text-dark fs-5">16</p>
+                        <p class="mb-0 text-dark fs-5">@ViewBag.v6</p>
                     </div>
                     <div class="col-md-6 col-lg-4 mb-3">
                         <h6 class="mb-1 text-secondary fw-bold">Rehber Sayısı</h6>
-                        <p class="mb-0 text-dark fs-5">6</p>
+                        <p class="mb-0 text-dark fs-5">@ViewBag.v4</p>
                     </div>
                     <div class="col-md-6 col-lg-4 mb-3">
                         <h6 class="mb-1 text-danger fw-bold">Toplam Misafir</h6>
-                        <p class="mb-0 text-dark fs-5">1286</p>
+                        <p class="mb-0 text-dark fs-5">@ViewBag.v5</p>
                     </div>
                 </div>
             </div>
