--- a/TraversalCoreProject/Areas/Member/Views/_ViewImports.cshtml
+++ b/TraversalCoreProject/Areas/Member/Views/_ViewImports.cshtml
@@ -3,4 +3,6 @@
 @using EntityLayer.Concrete
 @using DTOLayer.DTOs.DestinationDTOs
 @using DTOLayer.DTOs.ReservationDTOs
+@using DTOLayer.DTOs.GuideDTOs
+@inject Microsoft.Extensions.Localization.IStringLocalizer<SharedResource> T
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
