--- a/TraversalCoreProject/Views/MemberLayoutPartial/_Navbar2Partial.cshtml
+++ b/TraversalCoreProject/Views/MemberLayoutPartial/_Navbar2Partial.cshtml
@@ -2,6 +2,38 @@
 @*
     User/Member  Layout Navbar Component
 *@
+
+@{
+    var currentCulture = CultureInfo.CurrentUICulture.TwoLetterISOLanguageName;
+
+    string flagIcon;
+    string languageName;
+
+    switch (currentCulture)
+    {
+        case "en":
+            flagIcon = "flag-icon-us";
+            languageName = "English";
+            break;
+        case "ru":
+            flagIcon = "flag-icon-ru";
+            languageName = "Русский";
+            break;
+        case "fr":
+            flagIcon = "flag-icon-fr";
+            languageName = "Français";
+            break;
+        case "es":
+            flagIcon = "flag-icon-es";
+            languageName = "Español";
+            break;
+        case "tr":
+        default:
+            flagIcon = "flag-icon-tr";
+            languageName = "Türkçe";
+            break;
+    }
+}
 <nav class="header-navbar navbar-expand-md navbar navbar-with-menu navbar-without-dd-arrow fixed-top navbar-semi-light">
     <div class="navbar-wrapper">
         <div class="navbar-container content">
@@ -17,7 +49,7 @@
                                     <div class="input-group search-box">
                                         <div class="position-relative has-icon-right full-width">
                                             <input class="form-control" id="search" type="text" placeholder="Ara...">
-                                            <div class="form-control-position navbar-search-close"><i class="ft-x">   </i></div>
+                                            <div class="form-control-position navbar-search-close"><i class="ft-x"></i></div>
                                         </div>
                                     </div>
                                 </form>
@@ -27,21 +59,30 @@
                 </ul>
                 <ul class="nav navbar-nav float-right">
                     <li class="dropdown dropdown-language nav-item">
-                        <a class="dropdown-toggle nav-link" id="dropdown-flag" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="flag-icon flag-icon-tr"></i><span class="selected-language"></span></a>
+                        <a class="dropdown-toggle nav-link" id="dropdown-flag" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            <i class="flag-icon @flagIcon"></i>
+                            <span class="selected-language">@languageName</span>
+                        </a>
                         <div class="dropdown-menu" aria-labelledby="dropdown-flag">
-                            <div class="arrow_box"><a class="dropdown-item" href="#"><i class="flag-icon flag-icon-tr"></i> Türkçe</a><a class="dropdown-item" href="#"><i class="flag-icon flag-icon-us"></i> English</a><a class="dropdown-item" href="#"><i class="flag-icon flag-icon-cn"></i> Chinese</a><a class="dropdown-item" href="#"><i class="flag-icon flag-icon-ru"></i> Russian</a><a class="dropdown-item" href="#"><i class="flag-icon flag-icon-fr"></i> French</a><a class="dropdown-item" href="#"><i class="flag-icon flag-icon-es"></i> Spanish</a></div>
+                            <div class="arrow_box">
+                                <a class="dropdown-item" asp-controller="Language" asp-action="Change" asp-route-culture="tr" asp-route-returnUrl="@Context.Request.Path"><i class="flag-icon flag-icon-tr"></i> Türkçe</a>
+                                <a class="dropdown-item" asp-controller="Language" asp-action="Change" asp-route-culture="en" asp-route-returnUrl="@Context.Request.Path"><i class="flag-icon flag-icon-us"></i> English</a>
+                                <a class="dropdown-item" asp-controller="Language" asp-action="Change" asp-route-culture="ru" asp-route-returnUrl="@Context.Request.Path"><i class="flag-icon flag-icon-ru"></i> Русский (Russian)</a>
+                                <a class="dropdown-item" asp-controller="Language" asp-action="Change" asp-route-culture="fr" asp-route-returnUrl="@Context.Request.Path"><i class="flag-icon flag-icon-fr"></i> Français (French)</a>
+                                <a class="dropdown-item" asp-controller="Language" asp-action="Change" asp-route-culture="es" asp-route-returnUrl="@Context.Request.Path"><i class="flag-icon flag-icon-es"></i> Español (Spanish)</a>
+                            </div>
                         </div>
                     </li>
                 </ul>
                 <ul class="nav navbar-nav float-right">
                     <li class="dropdown dropdown-notification nav-item">
-                        <a class="nav-link nav-link-label" href="#" data-toggle="dropdown"><i class="ficon ft-mail">             </i></a>
+                        <a class="nav-link nav-link-label" href="#" data-toggle="dropdown"><i class="ficon ft-mail"></i></a>
                         <div class="dropdown-menu dropdown-menu-right">
-                            <div class="arrow_box_right"><a class="dropdown-item" href="#"><i class="ft-book"></i> Yeni Mesaj</a><a class="dropdown-item" href="#"><i class="ft-bookmark"></i> İletişim</a><a class="dropdown-item" href="#"><i class="ft-check-square"></i> Ana Sayfa      </a></div>
+                            <div class="arrow_box_right"><a class="dropdown-item" href="#"><i class="ft-book"></i> Yeni Mesaj</a><a class="dropdown-item" href="#"><i class="ft-bookmark"></i> İletişim</a><a class="dropdown-item" href="#"><i class="ft-check-square"></i> Ana Sayfa</a></div>
                         </div>
                     </li>
                     <li class="dropdown dropdown-user nav-item">
-                        <a class="dropdown-toggle nav-link dropdown-user-link" href="#" data-toggle="dropdown">             <span class="avatar avatar-online"><img src="~/Member/theme-assets/images/portrait/small/avatar-s-19.png" alt="avatar"><i></i></span></a>
+                        <a class="dropdown-toggle nav-link dropdown-user-link" href="#" data-toggle="dropdown"><span class="avatar avatar-online"><img src="~/Member/theme-assets/images/portrait/small/avatar-s-19.png" alt="avatar"><i></i></span></a>
                         <div class="dropdown-menu dropdown-menu-right">
                             <div class="arrow_box_right">
                                 <a class="dropdown-item" href="#"><span class="avatar avatar-online"><img src="~/Member/theme-assets/images/portrait/small/avatar-s-19.png" alt="avatar"><span class="user-name text-bold-700 ml-1">John Doe</span></span></a>
