--- a/TraversalCoreProject/Views/Shared/Components/_DestinationStatistic2/Default.cshtml
+++ b/TraversalCoreProject/Views/Shared/Components/_DestinationStatistic2/Default.cshtml
@@ -15,14 +15,14 @@
                             data-bs-target="#navs-tabs-line-card-income"
                             aria-controls="navs-tabs-line-card-income"
                             aria-selected="true">
-                        Income
+                        Gelir
                     </button>
                 </li>
                 <li class="nav-item">
-                    <button type="button" class="nav-link" role="tab">Expenses</button>
+                    <button type="button" class="nav-link" role="tab">Gider</button>
                 </li>
                 <li class="nav-item">
-                    <button type="button" class="nav-link" role="tab">Profit</button>
+                    <button type="button" class="nav-link" role="tab">Genel Tablo</button>
                 </li>
             </ul>
         </div>
@@ -34,9 +34,11 @@
                             <img src="~/sneat-1.0.0/assets/img/icons/unicons/wallet.png" alt="User" />
                         </div>
                         <div>
-                            <small class="text-muted d-block">Total Balance</small>
+                            <small class="text-muted d-block">Bakiye</small>
                             <div class="d-flex align-items-center">
-                                <h6 class="mb-0 me-1">$459.10</h6>
+                                <h6 class="mb-0 me-1">
+                                    ₺4,445,700
+                                </h6>
                                 <small class="text-success fw-semibold">
                                     <i class="bx bx-chevron-up"></i>
                                     42.9%
@@ -50,8 +52,8 @@
                             <div id="expensesOfWeek"></div>
                         </div>
                         <div>
-                            <p class="mb-n1 mt-1">Expenses This Week</p>
-                            <small class="text-muted">$39 less than last week</small>
+                            <p class="mb-n1 mt-1">Aylık Harcamalar</p>
+                            <small class="text-muted">₺39.450 daha az</small>
                         </div>
                     </div>
                 </div>
