--- a/TraversalCoreProject/Views/_ViewImports.cshtml
+++ b/TraversalCoreProject/Views/_ViewImports.cshtml
@@ -7,4 +7,7 @@
 @using DTOLayer.DTOs.FeatureDTOs
 @using DTOLayer.DTOs.SubAboutDTOs
 @using DTOLayer.DTOs.TestimanialDTOs
+@using DTOLayer.DTOs.GuideDTOs
+@using System.Globalization
+@inject Microsoft.Extensions.Localization.IStringLocalizer<SharedResource> T
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
