--- a/TraversalCoreProject/Areas/Admin/Views/_ViewImports.cshtml
+++ b/TraversalCoreProject/Areas/Admin/Views/_ViewImports.cshtml
@@ -7,6 +7,7 @@
 @using DTOLayer.DTOs.GuideDTOs
 @using DTOLayer.DTOs.ContactUsDTOs
 @using DTOLayer.DTOs.AnnouncementDTOs
+@using DTOLayer.DTOs.ReservationDTOs
 @using TraversalCoreProject.Models
 @using TraversalCoreProject.CQRS.Results.DestinationResult
 @using TraversalCoreProject.CQRS.Commands.DestinationCommands
