--- a/TraversalCoreProject/Views/Shared/Components/_AdminLayoutSideBarComponent/Default.cshtml
+++ b/TraversalCoreProject/Views/Shared/Components/_AdminLayoutSideBarComponent/Default.cshtml
@@ -26,7 +26,7 @@
     </li>
 
     <li class="menu-item">
-        <a href="#" class="menu-link">
+        <a href="/Admin/Reservation/Index" class="menu-link">
             <i class="menu-icon bi bi-calendar-check"></i>
             <div data-i18n="Analytics">Rezervasyonlar</div>
         </a>
@@ -87,23 +87,9 @@
     </li>
 
     <li class="menu-item">
-        <a href="#" class="menu-link">
-            <i class="menu-icon bi bi-info-circle"></i>
-            <div data-i18n="Analytics">Alt Hakkında</div>
-        </a>
-    </li>
-
-    <li class="menu-item">
         <a href="/Admin/Mail/Index" class="menu-link">
             <i class="menu-icon bi bi-envelope-plus"></i>
             <div data-i18n="Analytics">Mail Gönder</div>
-        </a>
-    </li>
-
-       <li class="menu-item">
-        <a href="#" class="menu-link">
-            <i class="menu-icon bi bi-star-half"></i>
-            <div data-i18n="Analytics">Öne Çıkanlar 2</div>
         </a>
     </li>
 
