--- a/TraversalCoreProject/Views/Shared/Components/_AdminLayoutSideBarComponent/Default.cshtml
+++ b/TraversalCoreProject/Views/Shared/Components/_AdminLayoutSideBarComponent/Default.cshtml
@@ -73,14 +73,14 @@
     </li>
 
     <li class="menu-item">
-        <a href="#" class="menu-link">
+        <a href="/Admin/Banner/Index" class="menu-link">
             <i class="menu-icon bi bi-star-half"></i>
-            <div data-i18n="Analytics">Öne Çıkanlar</div>
+            <div data-i18n="Analytics">Galeri</div>
         </a>
     </li>
 
     <li class="menu-item">
-        <a href="#" class="menu-link">
+        <a href="/Admin/Testimonial/Index" class="menu-link">
             <i class="menu-icon bi bi-hand-thumbs-up"></i>
             <div data-i18n="Analytics">Referanslar</div>
         </a>
@@ -94,21 +94,20 @@
     </li>
 
     <li class="menu-item">
-        <a href="#" class="menu-link">
-            <i class="menu-icon bi bi-person-gear"></i>
-            <div data-i18n="Analytics">Hesap İşlemleri</div>
-        </a>
-    </li>
-
-    <li class="menu-item">
         <a href="/Admin/Role/Index" class="menu-link">
             <i class="menu-icon bi bi-shield-lock"></i>
             <div data-i18n="Analytics">Roller</div>
         </a>
     </li>
+    <li class="menu-item">
+        <a href="/Admin/Role/UserList" class="menu-link">
+            <i class="menu-icon bi bi-shield-lock"></i>
+            <div data-i18n="Analytics">Rol İşlemleri</div>
+        </a>
+    </li>
 
     <li class="menu-item">
-        <a href="#" class="menu-link">
+        <a href="/Default/Index" class="menu-link">
             <i class="menu-icon bi bi-box-arrow-right"></i>
             <div data-i18n="Analytics">Çıkış Yap</div>
         </a>
