--- a/TraversalCoreProject/Views/_ViewImports.cshtml
+++ b/TraversalCoreProject/Views/_ViewImports.cshtml
@@ -9,6 +9,7 @@
 @using DTOLayer.DTOs.TestimanialDTOs
 @using DTOLayer.DTOs.ReservationDTOs
 @using DTOLayer.DTOs.GuideDTOs
+@using DTOLayer.DTOs.AppUserDTOs
 @using System.Globalization
 @inject Microsoft.Extensions.Localization.IStringLocalizer<SharedResource> T
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
