--- a/TraversalCoreProject/Areas/Admin/Views/User/Index.cshtml
+++ b/TraversalCoreProject/Areas/Admin/Views/User/Index.cshtml
@@ -17,7 +17,7 @@
             <table class="table table-hover table-striped align-middle mb-0">
                 <thead class="table-light">
                     <tr>
-                        <th class="text-center">#</th>
+                        <th class="text-center">Görsel</th>
                         <th class="text-start">Ad Soyad</th>
                         <th>Kullanıcı Adı</th>
                         <th>Mail</th>
@@ -33,7 +33,7 @@
                         count++;
                         <tr>
                             <td class="text-center text-secondary">
-                                <i class="bi bi-hash me-1"></i>@count
+                                <img src="@item.ImageUrl" height="50" width="50" class="rounded-circle" />
                             </td>
 
                             <td class="text-start fw-semibold">
