--- a/TraversalCoreProject/Areas/Member/Views/_ViewImports.cshtml
+++ b/TraversalCoreProject/Areas/Member/Views/_ViewImports.cshtml
@@ -4,5 +4,6 @@
 @using DTOLayer.DTOs.DestinationDTOs
 @using DTOLayer.DTOs.ReservationDTOs
 @using DTOLayer.DTOs.GuideDTOs
+@using DTOLayer.DTOs.AppUserDTOs
 @inject Microsoft.Extensions.Localization.IStringLocalizer<SharedResource> T
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
