--- a/TraversalCoreProject/Views/Login/SignIn.cshtml
+++ b/TraversalCoreProject/Views/Login/SignIn.cshtml
@@ -67,7 +67,7 @@
 						<span class="txt1">
 							Şifremi Unuttum
 						</span>
-						<a class="txt2" href="#">
+						<a class="txt2" href="/Account/ForgetPassword/">
 							Kullanıcı Adı / Mail?
 						</a>
 					</div>
