--- a/TraversalCoreProject/Views/Shared/Components/_Cards1Statistic/Default.cshtml
+++ b/TraversalCoreProject/Views/Shared/Components/_Cards1Statistic/Default.cshtml
@@ -31,7 +31,7 @@
                                  class="rounded" />
                         </div>
                     </div>
-                    <span>Misafir Sayısı</span>
+                    <span>Saatlik Rezervasyon</span>
                     <h3 class="card-title text-nowrap mb-1">@ViewBag.v2</h3>
                     <small class="text-success fw-semibold"><i class="bx bx-up-arrow-alt"></i> +28.42%</small>
                 </div>
