--- a/TraversalCoreProject/Views/Shared/Components/_DashboardBanner/Default.cshtml
+++ b/TraversalCoreProject/Views/Shared/Components/_DashboardBanner/Default.cshtml
@@ -10,7 +10,7 @@
                 <div class="card-body">
                     <h5 class="card-title text-primary">Tebrikler Admin! 🎉</h5>
                     <p class="mb-4">
-                        Büyüme oranınız: <span class="fw-bold">72%</span> Son 25 günde sisteminize 389 yeni misafir üye oldu.
+                        Büyüme oranınız: <span class="fw-bold">72%</span> Son 24 saat içinde sisteminize 43 yeni misafir üye oldu.
                     </p>
 
                     <a href="/Default/Index" class="btn btn-sm btn-outline-primary">Siteye Git</a>
