--- a/TraversalCoreProject/Areas/Admin/Views/ContactUs/Index.cshtml
+++ b/TraversalCoreProject/Areas/Admin/Views/ContactUs/Index.cshtml
@@ -7,7 +7,7 @@
 
 <div class="card-header bg-white">
     <h3 class="mb-0 fw-bold text-primary">
-        Aktif Tur Rotalarımız
+        Gelen Mesajlar
     </h3>
 </div>
 <div class="card shadow-sm border-0 rounded-3">
